--- a/football_project/requirements.txt
+++ b/football_project/requirements.txt
@@ -8,14 +8,15 @@ charset-normalizer==3.4.1
 click==8.1.8
 contourpy==1.3.2
 cycler==0.12.1
-Django==5.2.2
+Django==5.2
+django-cors-headers==4.7.0
 djangorestframework==3.16.0
 fonttools==4.57.0
 gitdb==4.0.12
 GitPython==3.1.44
 idna==3.10
 Jinja2==3.1.6
-joblib==1.4.2
+joblib==1.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
 kiwisolver==1.4.8
@@ -37,7 +38,7 @@ referencing==0.36.2
 requests==2.32.3
 rpds-py==0.24.0
 scikit-learn==1.6.1
-scipy==1.15.2
+scipy==1.15.3
 six==1.17.0
 smmap==5.0.2
 sqlparse==0.5.3
@@ -50,4 +51,3 @@ typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
 watchdog==6.0.0
-django-cors-headers
