--- a/react-dashboard/package.json
+++ b/react-dashboard/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "jwt-decode": "^4.0.0",
+    "plotly.js": "^3.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
